--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="info">
                     <h3>Email</h3>
-                    <p>omar.mnashat@gmail.com</p>
+                    <p>ashrfhelal7@gmail.com</p>
                 </div>
                 </div>
             </div>
